Build RC 1.4 August 3, 2011
* Fix some glitches caused by running server connections in seperate threads
* Plugin Framework reworked, now can use overriden methods, not interface



Build RC 1.3 August 1, 2011
* Fix Scrollbar issue with new windows where a lot of text gets entered, but does not show
* Fix Scrollbar issue on Nicklist overlapping Nicklist Buttons panel
* Add option to keep channel tab open if you get kicked
* Add option to show advanced server settings in server editor, disabled by default
* Added CTRL-Backspace removes a word at a time
* BNC Settings added into Server Editor
* Add in Server Editor "Show Advanced Settings" to show proxy/bnc/notes tabs 
* Add $md5() identifier
* Strip colors out of Channel List topics
* Add 'Add to Autojoin' for popupmenu for channel in server tree
* Add right click menu for channel list, add 'Add to Autojoin' and 'Join Channel'
* Add /clearall command to clear all the text windows and console tab windows



Build RC 1.2 July 21, 2011
* Fix Scrollbar issue with new windows where a lot of text gets entered, but does not show
* Fix Scrollbar issue on Nicklist overlapping Nicklist Buttons panel 


Build RC1.1 July 20, 2011
* Updater now shows progress bar status for each file to be downloaded
* Fix problem with channels clearing when settings changed, and Maximum text lines did not change
* Fix bug with selecting item in Nicklist Popup with no command, sends :No text to send
* Fix bug with $server and $port not parsing on server connect
* Fixed docking problem for side panels
* Ability to drag servers in the Server Tree up and down the list
* Added option to Show Hosts in Nick List under Display Settings
* Added option to Show Nick List buttons under Display settings
* Added option to Show Server List buttons under Display settings
* If pasting 5 or more lines, client asks if you wish to proceed
* Fixed more DCC File Receiving problems
* Fixed colors to be the same colors as IceChat 7